--- a/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.css
+++ b/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.css
@@ -369,3 +369,12 @@
 .entorno-dev .modal-body i {
   color: #0d6efd !important;
 }
+.entorno-dev .loader {
+  border-color: #cfe2ff;               /* borde base azul clarito */
+  border-top-color: #0d6efd !important; /* color azul Bootstrap para el giro */
+}
+.entorno-dev .btn-success {
+  background-color: #0d6efd !important;
+  border-color: #0d6efd !important;
+  color: white !important;
+}
