css responsive y rutas corregidas

--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -53,10 +53,10 @@
       </table>
 
       <div class="d-flex justify-content-center mt-4">
-        <a class="btn btn-warning mx-1" href="/admin/producto/xproveedor/plist">
+        <a class="btn btn-warning mx-1" href="/producto/xproveedor/plist">
           <i class="bi bi-list"></i> Listado Productos
         </a>
-        <a class="btn btn-primary mx-1" [routerLink]="['/admin/producto/edit', oProducto.id]">
+        <a class="btn btn-primary mx-1" [routerLink]="['/producto/edit', oProducto.id]">
           <i class="bi bi-pencil"></i> Editar Producto
         </a>
       </div>
