--- a/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.plist.routed/producto.admin.plist.routed.component.html
@@ -206,19 +206,19 @@
               <td>
                 <div class="btn-group btn-group-sm">
                   <button
-                    class="btn btn-success"
+                    class="btn-ver"
                     (click)="view(producto); $event.stopPropagation()"
                   >
                     <i class="bi bi-eye"></i>
                   </button>
                   <button
-                    class="btn btn-warning"
+                    class="btn-editar"
                     (click)="edit(producto); $event.stopPropagation()"
                   >
                     <i class="bi bi-pencil-square"></i>
                   </button>
                   <button
-                    class="btn btn-danger"
+                    class="btn-borrar"
                     (click)="
                       confirmarEliminarProducto(producto);
                       $event.stopPropagation()
