--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -1,20 +1,39 @@
-<div class="row justify-content-center m-3" [ngClass]="{ 'entorno-dev': isDev }">
+<div
+  class="row justify-content-center m-3"
+  [ngClass]="{ 'entorno-dev': isDev }"
+>
   <div class="col-lg-10 col-md-12 col-sm-12 d-flex flex-wrap">
     <!-- Parte izquierda -->
     <div class="col-lg-6 col-md-12">
       <h1 class="text-center mb-4">
-        <i class="bi bi-card-list"></i> Detalle de Producto <i class="bi bi-box-seam"></i>
+        <i class="bi bi-card-list"></i> Detalle de Producto
+        <i class="bi bi-box-seam"></i>
       </h1>
 
       <!-- 🟩 DATOS COMERCIALES -->
       <h4 class="text-success fw-bold mt-4">Datos comerciales</h4>
       <table class="table table-bordered table-striped text-center">
         <tbody>
-          <tr><th>Descripción</th><td>{{ oProducto.descripcion | noDisponible }}</td></tr>
-          <tr><th>Marca</th><td>{{ oProducto.marca | noDisponible }}</td></tr>
-          <tr><th>Unidad de Medida</th><td>{{ oProducto.unidadDeMedida | noDisponible }}</td></tr>
-          <tr><th>Referencia del Proveedor</th><td>{{ oProducto.referenciaProveedor | noDisponible }}</td></tr>
-          <tr><th>Centralizado</th><td>{{ oProducto.centralizado | noDisponible }}</td></tr>
+          <tr>
+            <th>Descripción</th>
+            <td>{{ oProducto.descripcion | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>Marca</th>
+            <td>{{ oProducto.marca | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>Unidad de Medida</th>
+            <td>{{ oProducto.unidadDeMedida | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>Referencia del Proveedor</th>
+            <td>{{ oProducto.referenciaProveedor | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>Centralizado</th>
+            <td>{{ oProducto.centralizado | noDisponible }}</td>
+          </tr>
         </tbody>
       </table>
 
@@ -22,15 +41,63 @@
       <h4 class="text-success fw-bold mt-4">Datos logísticos</h4>
       <table class="table table-bordered table-striped text-center">
         <tbody>
-          <tr><th>EAN</th><td>{{ oProducto.ean | noDisponible }}</td></tr>
-          <tr><th>EAN Caja / Pack</th><td>{{ oProducto.ean_caja | noDisponible }} / {{ oProducto.ean_pack | noDisponible }}</td></tr>
-          <tr><th>Unidades (Caja / Pack)</th><td>{{ oProducto.unidadDeCaja | noDisponible }} / {{ oProducto.unidadDePack | noDisponible }}</td></tr>
-          <tr><th>Cajas Capa / Palet</th><td>{{ oProducto.cajasCapa | noDisponible }} / {{ oProducto.cajasPalet | noDisponible }}</td></tr>
-          <tr><th>Largo x Ancho x Alto x Peso (Caja)</th><td>{{ oProducto.largo_caja | noDisponible }} x {{ oProducto.ancho_caja | noDisponible }} x {{ oProducto.alto_caja | noDisponible }} x {{ oProducto.peso_caja | noDisponible }}</td></tr>
-          <tr><th>Largo x Ancho x Alto (Unidad)</th><td>{{ oProducto.largo_unidad | noDisponible }} x {{ oProducto.ancho_unidad | noDisponible }} x {{ oProducto.alto_unidad | noDisponible }}</td></tr>
-          <tr><th>Peso Neto / Peso Escurrido (Unidad)</th><td>{{ oProducto.peso_neto_unidad | noDisponible }} / {{ oProducto.peso_escurrido_unidad | noDisponible }}</td></tr>
-          <tr><th>Días Caducidad</th><td>{{ oProducto.diasCaducidad | noDisponible }}</td></tr>
-          <tr><th>Leadtime</th><td>{{ oProducto.leadtime | noDisponible }}</td></tr>
+          <tr>
+            <th>EAN</th>
+            <td>{{ oProducto.ean | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>EAN Caja / Pack</th>
+            <td>
+              {{ oProducto.ean_caja | noDisponible }} /
+              {{ oProducto.ean_pack | noDisponible }}
+            </td>
+          </tr>
+          <tr>
+            <th>Unidades (Caja / Pack)</th>
+            <td>
+              {{ oProducto.unidadDeCaja | noDisponible }} /
+              {{ oProducto.unidadDePack | noDisponible }}
+            </td>
+          </tr>
+          <tr>
+            <th>Cajas Capa / Palet</th>
+            <td>
+              {{ oProducto.cajasCapa | noDisponible }} /
+              {{ oProducto.cajasPalet | noDisponible }}
+            </td>
+          </tr>
+          <tr>
+            <th>Largo x Ancho x Alto x Peso (Caja)</th>
+            <td>
+              {{ oProducto.largo_caja | noDisponible }} x
+              {{ oProducto.ancho_caja | noDisponible }} x
+              {{ oProducto.alto_caja | noDisponible }} x
+              {{ oProducto.peso_caja | noDisponible }}
+            </td>
+          </tr>
+          <tr>
+            <th>Largo x Ancho x Alto (Unidad)</th>
+            <td>
+              {{ oProducto.largo_unidad | noDisponible }} x
+              {{ oProducto.ancho_unidad | noDisponible }} x
+              {{ oProducto.alto_unidad | noDisponible }}
+            </td>
+          </tr>
+          <tr>
+            <th>Peso Neto / Peso Escurrido (Unidad)</th>
+            <td>
+              {{ oProducto.peso_neto_unidad | noDisponible }} /
+              {{ oProducto.peso_escurrido_unidad | noDisponible }}
+            </td>
+          </tr>
+          <tr>
+            <th>Días Caducidad</th>
+            <td>{{ oProducto.diasCaducidad | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>Leadtime</th>
+            <td>{{ oProducto.leadtime | noDisponible }}</td>
+          </tr>
         </tbody>
       </table>
 
@@ -38,9 +105,18 @@
       <h4 class="text-success fw-bold mt-4">Información fiscal</h4>
       <table class="table table-bordered table-striped text-center">
         <tbody>
-          <tr><th>Partida Arancelaria</th><td>{{ oProducto.partidaArancelaria | noDisponible }}</td></tr>
-          <tr><th>País Origen</th><td>{{ oProducto.paisOrigen | noDisponible }}</td></tr>
-          <tr><th>IVA</th><td>{{ oProducto.iva | noDisponible }} %</td></tr>
+          <tr>
+            <th>Partida Arancelaria</th>
+            <td>{{ oProducto.partidaArancelaria | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>País Origen</th>
+            <td>{{ oProducto.paisOrigen | noDisponible }}</td>
+          </tr>
+          <tr>
+            <th>IVA</th>
+            <td>{{ oProducto.iva | noDisponible }} %</td>
+          </tr>
         </tbody>
       </table>
 
@@ -48,15 +124,20 @@
       <h4 class="text-success fw-bold mt-4">Observaciones</h4>
       <table class="table table-bordered table-striped text-center">
         <tbody>
-          <tr><td>{{ oProducto.observaciones | noDisponible }}</td></tr>
+          <tr>
+            <td>{{ oProducto.observaciones | noDisponible }}</td>
+          </tr>
         </tbody>
       </table>
 
       <div class="d-flex justify-content-center mt-4">
-        <a class="btn btn-warning mx-1" href="/producto/xproveedor/plist">
+        <a class="btn-listado mx-1" href="/producto/xproveedor/plist">
           <i class="bi bi-list"></i> Listado Productos
         </a>
-        <a class="btn btn-primary mx-1" [routerLink]="['/producto/edit', oProducto.id]">
+        <a
+          class="btn btn-primary mx-1"
+          [routerLink]="['/producto/edit', oProducto.id]"
+        >
           <i class="bi bi-pencil"></i> Editar Producto
         </a>
       </div>
@@ -64,26 +145,56 @@
 
     <!-- Parte derecha: imágenes y documentos -->
     <div class="col-lg-6 col-md-12 text-center">
-
       <!-- 🖼️ IMÁGENES -->
       <ng-container *ngIf="!!oProducto?.imagenes?.length; else sinImagenes">
-        <div id="carouselProductoImagenes" class="carousel slide mt-3" data-bs-ride="carousel">
+        <div
+          id="carouselProductoImagenes"
+          class="carousel slide mt-3"
+          data-bs-ride="carousel"
+        >
           <div class="carousel-inner">
-            <div class="carousel-item" *ngFor="let img of oProducto.imagenes; let i = index" [class.active]="i === 0">
-              <img [src]="img.imagenUrl!.startsWith('http') ? img.imagenUrl : 'http://localhost:8086' + img.imagenUrl"
-                   class="d-block w-100"
-                   style="max-height: 300px; object-fit: contain; border-radius: 8px;"
-                   alt="Imagen del producto" />
+            <div
+              class="carousel-item"
+              *ngFor="let img of oProducto.imagenes; let i = index"
+              [class.active]="i === 0"
+            >
+              <img
+                [src]="
+                  img.imagenUrl!.startsWith('http')
+                    ? img.imagenUrl
+                    : 'http://localhost:8086' + img.imagenUrl
+                "
+                class="d-block w-100"
+                style="
+                  max-height: 300px;
+                  object-fit: contain;
+                  border-radius: 8px;
+                "
+                alt="Imagen del producto"
+              />
             </div>
           </div>
           <div class="text-center mt-2 total-imagenes">
-            Total de Imágenes: <span id="imageCount">{{ oProducto.imagenes?.length }}</span>
+            Total de Imágenes:
+            <span id="imageCount">{{ oProducto.imagenes?.length }}</span>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselProductoImagenes" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span><span class="visually-hidden">Anterior</span>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselProductoImagenes"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon"></span
+            ><span class="visually-hidden">Anterior</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselProductoImagenes" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span><span class="visually-hidden">Siguiente</span>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselProductoImagenes"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon"></span
+            ><span class="visually-hidden">Siguiente</span>
           </button>
         </div>
       </ng-container>
@@ -96,9 +207,15 @@
         <div class="mt-5">
           <label class="form-label fw-bold d-block">Documentos actuales</label>
           <ul class="list-group">
-            <li class="list-group-item" *ngFor="let doc of oProducto.documentos">
-              <a [href]="'http://localhost:8086' + doc.documentoUrl" target="_blank">
-                {{ doc.nombreOriginal || 'Documento sin nombre' }}
+            <li
+              class="list-group-item"
+              *ngFor="let doc of oProducto.documentos"
+            >
+              <a
+                [href]="'http://localhost:8086' + doc.documentoUrl"
+                target="_blank"
+              >
+                {{ doc.nombreOriginal || "Documento sin nombre" }}
               </a>
             </li>
           </ul>
